--- a/public/canciones.html
+++ b/public/canciones.html
@@ -21,6 +21,9 @@
     <select id="select-genero" style="padding:8px 18px;border-radius:16px;font-size:1.1rem;font-weight:700;color:#5a189a;background:#f3e8ff;border:1.5px solid #ba01ff;min-width:220px;max-width:100%;">
       <option value="" disabled selected>Selecciona un género...</option>
     </select>
+  </div>
+
+  <div id="generos-canciones" style="margin:32px auto;max-width:1100px;"></div>
   <script>
   function mainCanciones() {
     const generos = [
