implementación de noticias

--- a/public/noticias.html
+++ b/public/noticias.html
@@ -13,8 +13,13 @@
 </head>
 <body>
 
-<p class="normaltext"> Aca estaran las ultimas noticias de la musica, como la muerte de alguien famoso (que sea músico obviamente), los ultimos
-    lanzamientos de cualquier genero, los proximos eventos (conciertos, festivales o juntadas en general), etc. </p>
+
+<div class="content" style="background: white; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.08); margin-top: 40px; padding: 20px 10px 10px 10px;">
+  <div class="search-results-title" style="margin-bottom: 30px;">Últimas noticias de música</div>
+  <div id="news-list" class="row justify-content-center"></div>
+</div>
+
+<script src="noticias.js"></script>
 
 </body>
 </html>
