--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AttoMusic</title>
+  <!--recursos boostrap para modo oscuro-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -13,7 +15,10 @@
     <div class="container-fluid">
 
   <a class="navbar-brand" href="index.html"> <img alt="Icono" class="iconnavbar" src="images/iconowhite.png"> AttoMusic </a>
-
+      <!--Boton para nodo oscuro :)-->
+      <button class="btn rounded-fill" type="button" onclick="cambiarTema()"><i class="bi bi-moon-stars" id="dl-icon"></i></button>
+      <script src="tema.js"></script>
+      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
