--- a/public/buscador.html
+++ b/public/buscador.html
@@ -47,33 +47,24 @@
       }
       items.forEach(item => {
         const div = document.createElement("div");
-        div.className = "search-card vertical-card";
+        div.className = "search-card";
         let img = "";
         if (item.album?.images?.[0]?.url) img = item.album.images[0].url;
         else if (item.images?.[0]?.url) img = item.images[0].url;
         if (img && img.startsWith('icono')) img = 'images/' + img;
         div.innerHTML = `
           <img src="${img}" alt="cover">
-          <div class="card-info">
-            <h3>${item.name}</h3>
-            ${item.artists ? `<p>👩‍🎤 ${item.artists.map(a => a.name).join(", ")}</p>` : ""}
-            ${item.album?.release_date ? `<p>📅 ${item.album.release_date}</p>` : ""}
-            ${item.popularity !== undefined ? `<p>🔥 Popularidad: ${item.popularity}</p>` : ""}
-          </div>
+          <h3>${item.name}</h3>
+          ${item.artists ? `<p>👩‍🎤 ${item.artists.map(a => a.name).join(", ")}</p>` : ""}
+          ${item.album?.release_date ? `<p>📅 ${item.album.release_date}</p>` : ""}
+          ${item.popularity !== undefined ? `<p>🔥 Popularidad: ${item.popularity}</p>` : ""}
         `;
         div.style.cursor = "pointer";
         div.addEventListener("click", () => {
-          mostrarDetalleCancion(item.id);
-        });
-        container.appendChild(div);
-      });
-      // Animación al seleccionar una tarjeta
-      const allCards = Array.from(container.querySelectorAll('.search-card'));
-      allCards.forEach(card => {
-        card.addEventListener('click', function(e) {
-          if (this.classList.contains('selected')) return;
+          // Animación: agranda la tarjeta seleccionada y desvanece las demás
+          const allCards = Array.from(container.querySelectorAll('.search-card'));
           allCards.forEach(c => {
-            if (c === this) {
+            if (c === div) {
               c.classList.add('selected');
               c.classList.remove('faded');
             } else {
@@ -82,9 +73,12 @@
             }
           });
           setTimeout(() => {
-            mostrarDetalleCancion(items[allCards.indexOf(this)].id);
+            // Mostrar solo el detalle de la canción seleccionada
+            container.innerHTML = '';
+            mostrarDetalleCancion(item.id);
           }, 350);
         });
+        container.appendChild(div);
       });
     }
 
@@ -138,6 +132,61 @@
         `;
         container.appendChild(div);
       });
+    }
+
+    function mostrarDetalleCancion(id) {
+      // Ocupa todo el espacio del contenedor principal
+      const mainContent = document.getElementById("main-content") || document.body;
+      mainContent.innerHTML = `<div class='detalle-cancion-container' style='width:100%;height:100%;display:flex;justify-content:center;align-items:center;'><div class='search-card vertical-card' id='detalle-cancion' style='max-width:400px;width:100%;margin:auto;'></div></div>`;
+      const detalle = document.getElementById('detalle-cancion');
+      detalle.innerHTML = `<div style='text-align:center;color:#5a189a;font-size:1.5rem;'>Cargando...</div>`;
+      fetch(`https://attomusic.onrender.com/track/${id}`)
+        .then(res => res.json())
+        .then(track => {
+          let img = track.album?.images?.[0]?.url || "";
+          detalle.innerHTML = `
+            <button id='volver-btn' class='btn btn-outline-primary' style='margin-bottom:18px;background:linear-gradient(160deg,#ba01ff,#00dffc);color:white;border:none;'>⟵ Volver a resultados</button>
+            <h2 style='color:#5a189a;'>${track.name}</h2>
+            ${img ? `<img src='${img}' alt='cover' style='width:180px;height:180px;border-radius:12px;margin-bottom:12px;'>` : ""}
+            <p style='color:#ba01ff;font-weight:700;'>👩‍🎤 ${track.artists.map(a => a.name).join(", ")}</p>
+            <p>💿 Álbum: ${track.album?.name || ""}</p>
+            <p>📅 ${track.album?.release_date || ""}</p>
+            <p>🔥 Popularidad: ${track.popularity}</p>
+            <div style='margin-top:18px;'>
+              <h4 style='color:#ba01ff;'>Califica esta canción</h4>
+              <form id='calificar-form'>
+                <input type='number' id='calificacion' min='1' max='5' required style='width:60px;border-radius:8px;border:1px solid #ba01ff;'>
+                <button type='submit' class='btn btn-primary' style='margin-left:10px;background:linear-gradient(160deg,#ba01ff,#00dffc);border:none;'>Enviar</button>
+              </form>
+              <div id='calificacion-result'></div>
+            </div>
+            <div style='margin-top:18px;'>
+              <h4 style='color:#5a189a;'>Deja un comentario</h4>
+              <form id='comentario-form'>
+                <textarea id='comentario' rows='3' required style='width:100%;border-radius:8px;border:1px solid #5a189a;padding:8px;'></textarea>
+                <button type='submit' class='btn btn-primary' style='margin-top:10px;background:linear-gradient(160deg,#5a189a,#00dffc);border:none;width:100%;'>Enviar comentario</button>
+              </form>
+              <div id='comentario-result'></div>
+            </div>
+          `;
+          document.getElementById('volver-btn').onclick = () => {
+            // Recargar resultados de búsqueda y restaurar el buscador
+            window.location.reload();
+          };
+          document.getElementById("calificar-form").addEventListener("submit", function(e) {
+            e.preventDefault();
+            const val = document.getElementById("calificacion").value;
+            document.getElementById("calificacion-result").innerHTML = `<p style='color:#5a189a;'>¡Gracias! Calificaste esta canción con <b>${val}</b> estrellas.</p>`;
+          });
+          document.getElementById("comentario-form").addEventListener("submit", function(e) {
+            e.preventDefault();
+            const comentario = document.getElementById("comentario").value.trim();
+            if (comentario) {
+              document.getElementById("comentario-result").innerHTML = `<p style='color:#5a189a;'>¡Gracias por tu comentario!</p><div style='background:#f3e8ff;border-radius:8px;padding:10px;margin-top:6px;color:#5a189a;'>${comentario}</div>`;
+              document.getElementById("comentario").value = "";
+            }
+          });
+        });
     }
 
     runSearch();
