--- a/public/index.html
+++ b/public/index.html
@@ -8,55 +8,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <style>
-    /* NAV ICONS BIGGER */
-    .navbar-nav .nav-link i.bi {
-      font-size: 2.1rem;
-      transition: color 0.3s;
-      position: relative;
-      z-index: 1;
-    }
-    /* WAVE ANIMATION */
-    .music-wave-hover {
-      position: relative;
-      display: inline-block;
-      overflow: visible;
-    }
-    .music-wave-hover::before {
-      content: '';
-      position: absolute;
-      left: -30%;
-      top: 50%;
-      width: 160%;
-      height: 60%;
-      transform: translateY(-50%);
-      background: linear-gradient(90deg, #6a11cb 0%, #2575fc 50%, #ba01ff 100%);
-      opacity: 0.18;
-      border-radius: 50% 50% 50% 50%/60% 60% 40% 40%;
-      pointer-events: none;
-      z-index: 0;
-      animation: musicWave 1.2s linear infinite;
-      display: none;
-    }
-    .music-wave-hover.music-animate::before {
-      display: block;
-    }
-    @keyframes musicWave {
-      0% { left: -30%; opacity: 0.18; }
-      40% { opacity: 0.32; }
-      60% { opacity: 0.32; }
-      100% { left: 70%; opacity: 0.18; }
-    }
-    .music-wave-hover.music-animate i.bi {
-      color: #ba01ff;
-      filter: drop-shadow(0 0 8px #2575fc88);
-      transition: color 0.2s, filter 0.2s;
-    }
-    .navbar-nav .nav-link {
-      position: relative;
-      padding: 0.5rem 0.9rem;
-    }
-  </style>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -77,22 +28,22 @@
             <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginModal"> Iniciar Sesión </a></li>
             <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#registroModal"> Registrarse </a></li>
             <li class="nav-item">
-              <a class="nav-link load-page music-wave-hover" href="canciones.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Canciones">
+              <a class="nav-link load-page" href="canciones.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Canciones">
                 <i class="bi bi-music-note-list"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link load-page music-wave-hover" href="playlists.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Playlists">
+              <a class="nav-link load-page" href="playlists.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Playlists">
                 <i class="bi bi-music-player"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link load-page music-wave-hover" href="perfiles.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Perfiles">
+              <a class="nav-link load-page" href="perfiles.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Perfiles">
                 <i class="bi bi-people"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link load-page music-wave-hover" href="noticias.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Noticias">
+              <a class="nav-link load-page" href="noticias.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Noticias">
                 <i class="bi bi-newspaper"></i>
               </a>
             </li>
@@ -201,15 +152,6 @@
       var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
       tooltipTriggerList.forEach(function (tooltipTriggerEl) {
         new bootstrap.Tooltip(tooltipTriggerEl);
-      });
-      // Music wave hover effect
-      document.querySelectorAll('.music-wave-hover').forEach(el => {
-        el.addEventListener('mouseenter', function() {
-          el.classList.add('music-animate');
-        });
-        el.addEventListener('mouseleave', function() {
-          el.classList.remove('music-animate');
-        });
       });
     });
 
