--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <a class="navbar-brand" href="index.html"> <img alt="Icono" class="iconnavbar" src="images/iconowhite.png"> AttoMusic </a>
       <!--Boton para nodo oscuro :)-->
       <button class="btn rounded-fill" type="button" onclick="cambiarTema()"><i class="bi bi-moon-stars" id="dl-icon"></i></button>
-      <script src="tema.js"></script>
+      <script src="../temas.js"></script>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
