--- a/public/noticias.html
+++ b/public/noticias.html
@@ -22,7 +22,7 @@
   <div class="container-noticias"></div>
 </div>
 
-<script src="noticias.js"></script>
+<script src="../noticias.js"></script>
 
 </body>
 </html>
